@@ -1,3 +1,15 @@
+2009-04-08  Pedro Fragoso  <ember@ubuntu.com>
+
+	* src/gtkentryaction.c:
+	* src/gtkentryaction.h:
+	* src/yelp-bookmarks.c:
+	* src/yelp-bookmarks.h:
+	* src/yelp-main.c:
+	* src/yelp-print.h:
+	* src/yelp-settings.h:
+	* src/yelp-window.h:
+	GNOME Goal: Clean up GLib and GTK+ includes (Closes: #563865)
+
 2009-03-16  Shaun McCance  <shaunm@gnome.org>
 
 	* configure.in:
